fixed spacing

--- a/css/contact.css
+++ b/css/contact.css
@@ -8,7 +8,6 @@
 
 .contact-header {
     border-color: #f3da6a;
-    /* top: 120px; */
     margin: 3rem auto;
 }
 
@@ -16,15 +15,12 @@
 .contact-form {
     display: flex;
     justify-content: center;
-    /*position: absolute;
-     top: 224px; */
     left: 0;
     right: 0;
     width: 95vw;
 	max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
-/*    padding: 1.5rem; */
     z-index: 5;
 }
 
@@ -145,6 +141,6 @@
 }
 
 .home.contact-form {
+    position: absolute;
     mix-blend-mode: screen;
-   /* top: 290px; */
 }
