--- a/css/home-container.css
+++ b/css/home-container.css
@@ -10,3 +10,9 @@
     justify-content: flex-start;
     box-sizing: border-box;
 }
+
+.home-content-container {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+}
