--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,70 +1,3 @@
-/* .navbar{
-	top: 0;
-    left: 0;
-	z-index: 40;
-	position: fixed;
-	width: 100vw;
-}
-
-.custom-navbar {
-	background-color: #182433 !important;
-	color: #FFCC7F !important;
-}
-
-.custom-navbar .nav-link {
-	color: #FFCC7F !important;
-}
-
-.custom-navbar .nav-link:hover {
-	color: #ffffff !important;
-}
-
-.custom-navbar .dropdown-menu {
-	background-color: #182433;
-}
-
-.custom-navbar .dropdown-item {
-	color: #FFCC7F;
-}
-
-.custom-navbar .dropdown-item:hover {
-	background-color: #501B27;
-	color: #ffffff;
-}
-
-.custom-toggler .navbar-toggler-icon {
-	background-image: url("../images/TD.png");
-	image-rendering: auto;
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center;
-	border-color: #FFCC7F;
-	width: 30px;
-	height: 30px;
-}
-
-.custom-toggler:focus,
-.custom-toggler:hover {
-	border-color: #ffcc7f;
-	box-shadow: 0 0 0 0.2rem rgba(255, 204, 127, 0.5);
-}
-
-
-#reveal-resume {
-	border: 2px solid transparent;
-	padding: 0.25rem 0.5rem;
-	border-radius: 4px;
-	transition: all 0.2s ease;
-}
-
-#reveal-resume:focus,
-#reveal-resume:hover {
-	border-color: rgb(31, 154, 163);
-	box-shadow: 0 0 0 0.2rem rgba(31, 154, 163, 0.5);
-	background-color: rgba(31, 154, 163, 0.1);
-}
- */
-
 
  .custom-navbar {
 	position: fixed;
@@ -80,8 +13,6 @@
 }
 
 .navbar-container {
-/*	display: flex;
-	justify-content: space-between; */
 	display: grid;
 	grid-template-columns: 1fr auto 1fr;
 	align-items: center;
