--- a/css/resume.css
+++ b/css/resume.css
@@ -4,7 +4,6 @@
 }
 
 .resume-header {
-	/* top: 120px; */
 	margin: 3rem auto;
 }
 
@@ -18,21 +17,14 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
-	/* position: absolute;
-	top: 224px; */
 	left: 0;
 	right: 0;
 	width: 90vw;
 	max-width: 1330px;
 	margin-left: auto;
 	margin-right: auto;
-	/* border: 3px solid #004450;
-    border-radius: 12px;
-    box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.1); */
-	padding: 1.5rem;
 	z-index: 5;
     gap: 1.5rem;
-    /* mix-blend-mode: screen; */
 }
 
 .resume-skills, .resume-blurb {
@@ -40,7 +32,6 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	/*width: 47%;*/
     flex: 1 1 300px;
     min-width: 300px;
     max-width: 600px;
@@ -133,8 +124,8 @@ body {
 
 
 .home.resume-container {
+	position: absolute;
 	mix-blend-mode: screen;
-	/* top: 290px; */
 }
 
 .home.resume-skills, .home.resume-blurb {
@@ -149,7 +140,7 @@ body {
 	padding: 1rem;
 	border-radius: 8px;
 	box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.55);
-	border: 3px solid; /* for debugging layout */
+	border: 3px solid;
     border-color: #1f9aa3;
 }
 
